[metadata]
name = scSpatial
version = attr: scSpatial.VERSION
description = Package used to analyse spatial transcriptomics data with build in segmentation and information transfer
long_description = file: README.md
keywords = spatial, transcriptomics, scRNA-seq
license = MIT License
author = Jon E.T. Jakobsson
author_email = jetjakobsson@gmail.com
classifiers = 
    Framework :: Napari
    Programming Language :: Python :: 3

[options]
packages = find:

install_requires = 
    scanpy
    Napari
    BoneFight @ git+https://github.com/linnarsson-lab/BoneFight.git@8c1ec1f
    Loompy @ git+https://github.com/linnarsson-lab/loompy.git@master
    cellpose[all]
    scikit-image
    plotly
    PyQtWebEngine

python_requires = >=3.7

[options.entry_points]
console_scripts = 
    scSpatial = scSpatial:run