[metadata]
name = scSpatial
version = attr: scSpatial.VERSION
description = Package used to analyse spatial transcriptomics data with build in segmentation and information transfer
long_description = file: README.md
long_description_content_type = text/markdown
keywords = spatial, transcriptomics, scRNA-seq
author = Jon E.T. Jakobsson
author_email = jetjakobsson@gmail.com
classifiers = 
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:

install_requires = 
    scanpy
    Napari
    cellpose[all]==1.0.2
    scikit-image
    plotly
    PyQtWebEngine

python_requires = >=3.7

[options.entry_points]
console_scripts = 
    scSpatial = scSpatial:run